# gluchart

./: .gitignore  Makefile  manage.py  output.css  package-lock.json  package.json  pyproject.toml  tailwind.config.js
chart/: filters.py  forms.py  librelinkup.py  models.py  serializers.py  utils.py  views.py
chart/api/: views.py
chart/templates/: bar_sample.html  line_sample.html  sample.html  sample2.html  test.xml
gluchart/: asgi.py  settings.py  urls.py  views.py  wsgi.py
res/: old_libre_readings.csv  old_readings_fmt.csv
res/librelinkup/: values.json
sources/: filters.py  models.py  urls.py  utils.py  views.py
sources/api/: serializers.py  urls.py  views.py
sources/migrations/: 0001_initial.py  0002_glucosevalue_created_at_glucosevalue_modified_at_and_more.py  0004_glucosevalue_chart_gluco_user_id_e66e30_idx.py
static/: output.css  tailwind-output.css
templates/: add_data_source.html  base.html  data_source_found.html  data_sources.html  graph.html  htmx_arrow.html  htmx_base.html  htmx_component.html  htmx_graph.html  layout.html  login.html  navbar.html
templates/example_pages/: data_sources.html  graph.html  login.html
templates/registration/: logged_out.html  login.html
users/api/: serializers.py  urls.py  views.py
users/migrations/: 0003_glucosevalue_user.py  0005_alter_glucosevalue_value.py  0010_alter_glucosevalue_source.py
values/: filters.py  forms.py  models.py  urls.py  views.py
values/api/: serializers.py  urls.py  views.py
values/migrations/: 0001_initial.py  0006_source_user.py  0009_alter_source_token.py  (+2 more)
